# robot_comic

./: .branch_protection_probe  .env.example  .gitignore  .protection-probe  CLAUDE.md  COMEDIAN_PROJECT.md  CONTRIBUTING.md  DEVELOPMENT.md  DISCLOSURE.md  FUTURE_RESEARCH.md  LOCAL_LLM.md  NOW.md  PIPELINE_REFACTOR.md  README.md  VOICE_CLONE.md  bench_llm.py  plan.md  probe_s2s_realtime_audio.py  probe_s2s_realtime_text.py  pyproject.toml  setup.py
.claude/: AGENTS.md  settings.json  settings.local.json
.claude/hooks/: check_worktree_cwd.py
.githooks/: pre-commit
.github/: pull_request_template.md
.github/workflows/: pr-hf-space-preview.yml  pytest-fast.yml  pytest-full.yml  pytest.yml  sync-hf-space.yml
assets/: static_prompts.toml  welcome_sources.toml
deploy/signoz/: docker-compose.yml  install.sh  uninstall.sh
deploy/signoz/config/: clickhouse-config.xml  clickhouse-users.xml  otel-collector-config.yaml
deploy/systemd/: journald-robot-comic.conf  reachy-app-autostart.service
deploy/wifi/: add-backup-wifi.sh
docs/: audio-backends.md  integration-tests.md  rickles_corpus.md  signoz-on-pi.md  voice-cloning.md  ws-protocol.md
docs/perf/: importtime-2026-05-14.txt  importtime-analysis.md  importtime-parsed-summary.txt
docs/references/: alsa-mmap-attenuation.md  audio-playback-recipe.md
external_content/external_tools/: starter_custom_tool.py
profiles/andrew_dice_clay/: elevenlabs.txt  gemini_live.txt  gemini_tts.txt  gestures.txt  instructions.txt  voice.txt
profiles/bill_hicks/: elevenlabs.txt  empty_stop_fallbacks.txt  gemini_live.txt  gemini_tts.txt  gestures.txt  instructions.txt  openers.txt
profiles/cosmic_kitchen/: instructions.txt
profiles/dave_chappelle/: elevenlabs.txt  gemini_live.txt  gemini_tts.txt  gestures.txt  instructions.txt
profiles/default/: elevenlabs.txt  openers.txt
profiles/don_rickles/: chatterbox.txt  crowd_work.py  elevenlabs.txt  gemini_live.txt  gemini_tts.txt  gestures.txt  greet.py  instructions.txt  openers.txt  roast.py  tools.txt
profiles/example/: sweep_look.py  tools.txt
profiles/george_carlin/: chatterbox.txt  elevenlabs.txt  euphemisms.json  gemini_live.txt  gemini_tts.txt  gestures.txt  instructions.txt  tools.txt
profiles/richard_pryor/: elevenlabs.txt  gemini_live.txt  gemini_tts.txt  gestures.txt  instructions.txt
profiles/robin_williams/: elevenlabs.txt  gemini_live.txt  gemini_tts.txt  gestures.txt  instructions.txt
profiles/rodney_dangerfield/: elevenlabs.txt  gemini_live.txt  gemini_tts.txt  gestures.txt  instructions.txt
scripts/: build_welcome_assets.py  cleanup-worktrees.sh  convert_moonshine_to_ort.py  dsnoop_multireader_check.py  elevenlabs_clone.py  elevenlabs_pvc_clone.py  install-pi-journald.sh  profile_console_import.py  regenerate-static-prompts.py  wait-for-reachy-daemon.sh
src/reachy_mini_conversation_app/: base_realtime.py  config.py  console.py  gemini_live.py  gradio_personality.py  headless_personality_ui.py  huggingface_realtime.py  main.py  openai_realtime.py  prompts.py
src/reachy_talk_data/: __init__.py
src/robot_comic/: audio_gain.py  backends.py  base_realtime.py  camera_frame_encoding.py  camera_worker.py  chatterbox_tag_translator.py  chatterbox_tts.py  chatterbox_voice_clone.py  composable_conversation_handler.py  composable_pipeline.py  config.py  console.py  conversation_handler.py  dance_emotion_moves.py  elevenlabs_tts.py  elevenlabs_voices.py  empty_stop_fallbacks.py  gemini_live.py  gemini_llm.py  gemini_retry.py  gemini_text_base.py  gemini_text_handlers.py  gemini_tts.py  gradio_personality.py  guardrail.py  handler_factory.py  headless_personality.py  headless_personality_ui.py  history_trim.py  huggingface_realtime.py  joke_history.py  llama_base.py  llama_elevenlabs_tts.py  llama_gemini_tts.py  local_stt_realtime.py  main.py  monitor.py  monitor_input.py  motion_safety.py  moves.py  (+18 more)
tests/: _helpers.py  conftest.py  test_admin_pipeline_3column.py  test_alsa_rw_capture.py  test_audio_backends_config.py  test_backends_protocols.py  test_battery_route.py  test_camera_worker_lazy_init.py  test_chatterbox_auto_gain.py  test_chatterbox_tts.py  test_chatterbox_voice_clone.py  test_cleanup_worktrees_script.py  test_cold_boot_imports.py  test_composable_conversation_handler.py  test_composable_echo_guard.py  test_composable_persona_reset.py  test_composable_pipeline.py  test_config_attr_consistency.py  test_config_factory_path.py  test_config_name_collisions.py  test_config_new_flags.py  test_config_pipeline_mode.py  test_console.py  test_console_audio_source.py  test_console_xtts_picker.py  test_conversation_handler_abc.py  test_dance_emotion_moves.py  test_debug_frame_dump.py  test_deploy_files.py  test_echo_suppression.py  test_elevenlabs_clone_script.py  test_elevenlabs_profile_configs.py  test_elevenlabs_start_up_supporting_events.py  test_elevenlabs_tts.py  test_elevenlabs_voices.py  test_empty_stop_fallbacks.py  test_engagement_monitor.py  test_external_loading.py  test_face_db.py  test_gemini_live.py  (+70 more)
tests/adapters/: test_chatterbox_tts_adapter.py  test_elevenlabs_tts_adapter.py  test_faster_whisper_stt_adapter.py  test_gemini_bundled_llm_adapter.py  test_gemini_llm_adapter.py  test_gemini_tts_adapter.py  test_llama_llm_adapter.py  test_moonshine_listener.py  test_moonshine_stt_adapter.py  test_tts_backend_contract.py  test_xtts_tts_adapter.py
tests/audio/: test_head_wobbler.py  test_startup_config.py
tests/integration/: __init__.py  conftest.py  test_chatterbox_smoke.py  test_elevenlabs_smoke.py  test_gemini_live_smoke.py  test_gemini_text_smoke.py  test_gemini_tts_smoke.py  test_handler_factory_smoke.py  test_hf_realtime_smoke.py  test_llama_elevenlabs_smoke.py  test_openai_realtime_smoke.py
tests/tools/: test_background_tool_manager.py  test_camera.py  test_crowd_work.py  test_greet.py  test_greet_face_identify.py  test_language_dissect.py  test_move_head.py  test_name_validation.py  test_roast.py  test_tool_dependencies_vision_client.py
tests/vision/: test_face_recognition_embedder.py  test_local_vision.py  test_yolo_process.py
(+161 files in other folders)
