[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "robot_comic"
version = "0.6.2"
authors = [{ name = "Pollen Robotics", email = "contact@pollen-robotics.com" }]
description = "Robot Comic voice app for Reachy Mini"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    #Media
    "av",
    "aiortc>=1.13.0",
    "fastrtc>=0.0.34",
    "gradio==5.50.1.dev1",
    "huggingface-hub==1.3.0",
    "httpx",
    "mediapipe==0.10.14",

    #Environment variables
    "python-dotenv",

    #OpenAI
    "openai>=2.30.0",

    #Gemini
    "google-genai>=1.0.0",

    #WebSocket Pi ↔ laptop channel
    "websockets>=13.0",

    #OpenTelemetry (always installed; gated by ROBOT_INSTRUMENTATION at runtime)
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",

    #Reachy mini
    "reachy_mini_dances_library",
    "reachy_mini_toolbox",
    "reachy-mini>=1.7.1",
    "gradio_client>=1.13.3",
]

[project.optional-dependencies]
local_vision = [
  "accelerate>=1.13.0",
  "torch>=2.1",
  "transformers==5.3.0",
  "num2words",
]
yolo_vision = [
  "ultralytics",
  "supervision",
  "opencv-python>=4.13.0.92",
]
mediapipe_vision = [
  # Kept for backwards-compatible install commands. MediaPipe is now part of
  # the default app install because it powers the lightweight head tracker.
]
local_stt = [
  "moonshine-voice>=0.0.46",
]
faster_whisper_stt = [
  # Phase 5f: faster-whisper STT as alternate to Moonshine. See issue #387.
  # Same faster-whisper version asset_build pulls in for the build-time
  # scripts (script use is decoupled — `asset_build` keeps its own copy
  # so a faster-whisper bump here doesn't silently break build_welcome_assets.py).
  "faster-whisper>=1.0.0",
  # Phase 5f.1: webrtcvad chunks streaming audio into utterances since
  # faster-whisper is batch-only. Picked over silero-vad because silero-vad
  # transitively pulls torch (~2 GB), which won't fit on the 14 GB chassis
  # eMMC. webrtcvad is a ~50 KB pure C extension with no torch / no onnx.
  "webrtcvad>=2.0.10",
]
otel = [
  # OTLP exporter for remote/SigNoz export (ROBOT_INSTRUMENTATION=remote).
  # Requires protobuf>=5 which conflicts with mediapipe<5; install separately
  # on hosts that don't use mediapipe (e.g. CI, cloud aggregators).
  "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
]
monitor = [
  "rich>=13.0",
]
asset_build = [
  # Optional deps for scripts/build_welcome_assets.py only.
  # faster-whisper is preferred; whisper-timestamped is a fallback.
  "faster-whisper>=1.0.0",
  "whisper-timestamped>=1.15.0",
]
face_recognition = [
  "face_recognition>=1.3.0",
]
all_vision = [
  "accelerate>=1.13.0",
  "torch>=2.1",
  "transformers==5.3.0",
  "num2words",
  "ultralytics",
  "supervision",
  "opencv-python>=4.13.0.92",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-testmon>=2.1",
  "pytest-xdist>=3.5",
  "ruff==0.12.0",
  "mypy==1.18.2",
  "pre-commit",
  "types-requests",
  "python-semantic-release>=10.5.3",
]

[project.scripts]
robot-comic = "robot_comic.main:main"
robot-comic-monitor = "robot_comic.monitor:main"

[tool.uv]
torch-backend = "cu124"
dependency-metadata = [
    # Upstream metadata currently marks `gstreamer-msvc-runtime` as unconditional.
    # It should only be required on Windows. Temp fix.
    { name = "gstreamer-libs", version = "1.28.1", requires-dist = ["gstreamer-msvc-runtime; sys_platform == 'win32'", "setuptools"] },
]

[project.entry-points."reachy_mini_apps"]
robot_comic = "robot_comic.main:RobotComic"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
robot_comic = [
  "images/*",
  "static/*",
  ".env.example",
  "demos/**/*.txt",
  "prompts_library/*.txt",
  "prompts/**/*.txt",
]
reachy_talk_data = [
  "profiles/**/*.txt",
  "profiles/**/*.py",
]

[tool.ruff]
line-length = 119
exclude = [".venv", "dist", "build", "**/__pycache__", "*.egg-info", ".mypy_cache", ".pytest_cache"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort
  "C4",  # flake8-comprehensions
  "D",   # pydocstyle
]
ignore = [
  "E501",  # handled by formatter
  "D100",  # ignore missing module docstrings
  "D203",  # blank line before class docstring (conflicts with D211)
  "D205",  # multi-line summary — conflicts with existing wrap-first-sentence style
  "D213",  # summary on second line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
# warnings.filterwarnings() must run before imports to suppress protobuf noise at import time
"src/robot_comic/main.py" = ["E402"]
# Build-time scripts: allow late imports (sys.path tweaks, optional deps) and skip pydocstyle.
"scripts/*.py" = ["D", "E402"]
# Benchmarking script — not part of the installed package; skip pydocstyle.
"bench_llm.py" = ["D"]
# Voice-prep utility scripts — not part of the installed package; skip pydocstyle.
"profiles/**/*.py" = ["D"]
# Tests do not require public-API docstrings.
"tests/**/*.py" = ["D"]
# test_local_vision.py uses pytest.importorskip() before the module import (E402 is intentional).
"tests/vision/test_local_vision.py" = ["E402"]
# Subclass overrides are documented on the base class; skip per-method/init docstring rules.
# gemini_tts.py also guards google-genai imports behind a try/except (E402 is intentional).
"src/robot_comic/elevenlabs_tts.py" = ["D102", "D107"]
"src/robot_comic/gemini_tts.py" = ["E402", "D102", "D107"]
"src/robot_comic/llama_base.py" = ["D102", "D107"]
"src/robot_comic/llama_elevenlabs_tts.py" = ["D102", "D107"]
"src/robot_comic/llama_gemini_tts.py" = ["D102", "D107"]
"src/robot_comic/monitor.py" = ["D102", "D107"]

[tool.ruff.lint.isort]
length-sort = true
lines-after-imports = 2
no-lines-before = ["standard-library", "local-folder"]
known-local-folder = ["robot_comic"]
known-first-party = ["reachy_mini", "reachy_mini_dances_library", "reachy_mini_toolbox"]
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
files = ["src/"]
ignore_missing_imports = true
strict = true
show_error_codes = true
warn_unused_ignores = true

[tool.pytest.ini_options]
markers = [
  "integration: end-to-end smoke tests; skipped by default. Run with `pytest -m integration`.",
  "slow: marks tests taking >500ms (deselect with `-m 'not slow'`).",
  "hardware: marks tests that require real ALSA / serial / GPIO devices.",
]
# pytest-xdist: `-n auto` spawns one worker per CPU; `--dist=loadgroup`
# keeps tests with the same `@pytest.mark.xdist_group(...)` on the same
# worker so they don't race on shared state.
addopts = "-m 'not integration' -n auto --dist=loadgroup"
